# MQLib

./: .clang-format  .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md
.build/: .gitignore
.build/heuristics/: .gitignore
Cloud/: CloudSetup.py  INSTALL.py  INSTALL.sh  MQLibDispatcher.py  MQLibMaster.py  MQLibRunner.py  README.md  grabFullRuns.py  grabGraphInfo.py
analysis/: README.md  analyze.R  heuristics.csv  papersummary.csv  runtime.R  storeRF.R
analysis/fittedTrees/: ALKHAMIS1998.rds  ALKHAMIS1998.rf  BEASLEY1998SA.rds  BEASLEY1998SA.rf  BEASLEY1998TS.rds  BEASLEY1998TS.rf  BURER2002.rds  BURER2002.rf  DUARTE2005.rds  DUARTE2005.rf  FESTA2002G.rds  FESTA2002G.rf  FESTA2002GPR.rds  FESTA2002GPR.rf  FESTA2002GVNS.rds  FESTA2002GVNS.rf  FESTA2002GVNSPR.rds  FESTA2002GVNSPR.rf  FESTA2002VNS.rds  FESTA2002VNS.rf  FESTA2002VNSPR.rds  FESTA2002VNSPR.rf  GLOVER1998a.rds  GLOVER1998a.rf  GLOVER2010.rds  GLOVER2010.rf  HASAN2000GA.rds  HASAN2000GA.rf  HASAN2000TS.rds  HASAN2000TS.rf  KATAYAMA2000.rds  KATAYAMA2000.rf  KATAYAMA2001.rds  KATAYAMA2001.rf  LAGUNA2009HCE.rds  LAGUNA2009HCE.rf  LODI1999.rds  LODI1999.rf  LU2010.rds  LU2010.rf  (+28 more)
data/: README.md  SearchResults_Filtered.txt  heuristics.txt  instance_header_info.csv  instances.txt  metrics.csv  runtimes.csv  scaling.csv  standard.csv
hhdata/: ALKHAMIS1998.rf  BEASLEY1998SA.rf  BEASLEY1998TS.rf  BURER2002.rf  DUARTE2005.rf  FESTA2002G.rf  FESTA2002GPR.rf  FESTA2002GVNS.rf  FESTA2002GVNSPR.rf  FESTA2002VNS.rf  FESTA2002VNSPR.rf  GLOVER1998a.rf  GLOVER2010.rf  HASAN2000GA.rf  HASAN2000TS.rf  KATAYAMA2000.rf  KATAYAMA2001.rf  LAGUNA2009HCE.rf  LODI1999.rf  LU2010.rf  MERZ1999CROSS.rf  MERZ1999GLS.rf  MERZ1999MUTATE.rf  MERZ2002GREEDY.rf  MERZ2002GREEDYKOPT.rf  MERZ2002KOPT.rf  MERZ2002ONEOPT.rf  MERZ2004.rf  PALUBECKIS2004bMST1.rf  PALUBECKIS2004bMST2.rf  PALUBECKIS2004bMST3.rf  PALUBECKIS2004bMST4.rf  PALUBECKIS2004bMST5.rf  PALUBECKIS2004bSTS.rf  PALUBECKIS2006.rf  PARDALOS2008.rf
include/heuristics/: base_solution.h  extended_solution.h  heuristic_factory.h
include/metrics/: max_cut_metrics.h
include/problem/: heuristic.h  instance.h  max_cut_heuristic.h  max_cut_instance.h  qubo_heuristic.h  qubo_instance.h
paper/: README.md
scripts/: README.md  benchmark.py  downloadAllGraphs.py  downloadGraph.py  downloadGraphHeaders.py  list_graphs.py  scaling.py
src/: CMakeLists.txt  README.md  main.cpp
src/heuristics/: base_solution.cpp  extended_solution.cpp  heuristic_factory.cpp
src/heuristics/maxcut/: baseline.cpp  burer2002.cpp  deSousa2013.cpp  duarte2005.cpp  festa2002.cpp  hyperheuristic.cpp  laguna2009.cpp  max_cut_partial_solution.cpp  max_cut_simple_solution.cpp  max_cut_solution.cpp
src/heuristics/qubo/: alkhamis1998.cpp  beasley1998.cpp  glover1998a.cpp  glover2010.cpp  hasan2000.cpp  katayama2000.cpp  katayama2001.cpp  lodi1999.cpp  lu2010.cpp  merz1999.cpp  merz2002.cpp  merz2004.cpp  palubeckis2004b.cpp  palubeckis2006.cpp  pardalos2008.cpp  qubo_partial_solution.cpp  qubo_simple_solution.cpp  qubo_solution.cpp
src/metrics/: max_cut_metrics.cpp
src/problem/: heuristic.cpp  instance.cpp  max_cut_heuristic.cpp  max_cut_instance.cpp  qubo_heuristic.cpp  qubo_instance.cpp
src/util/: random.cpp  randomForest.cpp
test/: CMakeLists.txt  test_sample_problems.cpp
(+72 files in other folders)
